tests/assets/test_suites/w3c_wsdl20/documents/good/MultipleInlineSchemas-1G/retrieveItems.wsdl
<?xml version="1.0" encoding="utf-8" ?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/MultipleInlineSchemas-1G/retrieveItems.wsdl -->
<!-- Copyright © 2007-03-23 05:50 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<description xmlns="http://www.w3.org/ns/wsdl"
	targetNamespace="http://greath.example.com/2004/services/retrieveDetails"
	xmlns:tns="http://greath.example.com/2004/services/retrieveDetails"
	xmlns:wdetails="http://greath.example.com/2004/schemas/reservationDetails"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<documentation>
		This document describes the GreatH Retrieve Reservation Details
		Web service.
	</documentation>

	<types>

		<xs:schema
			targetNamespace="http://greath.example.com/2004/schemas/reservationItems">

			<xs:element name="confirmationNumber" type="xs:string" />
			<xs:element name="checkInDate" type="xs:date" />
			<xs:element name="checkOutDate" type="xs:date" />
			<xs:element name="roomType" type="xs:string" />
			<xs:element name="smoking" type="xs:boolean" />

		</xs:schema>

		<xs:schema
			targetNamespace="http://greath.example.com/2004/schemas/reservationDetails"
			xmlns:items="http://greath.example.com/2004/schemas/reservationItems">

			<xs:import
				namespace="http://greath.example.com/2004/schemas/reservationItems" />

			<xs:element name="reservationDetails">
				<xs:complexType>
					<xs:sequence>
						<xs:element ref="items:confirmationNumber" />
						<xs:element ref="items:checkInDate" />
						<xs:element ref="items:checkOutDate" />
						<xs:element ref="items:roomType" />
						<xs:element ref="items:smoking" />
					</xs:sequence>
				</xs:complexType>
			</xs:element>
		</xs:schema>

	</types>

	<interface name="retrieveDetailsInterface">

		<operation name="retrieve"
			pattern="http://www.w3.org/ns/wsdl/in-out">
			<input messageLabel="In" element="#none" />
			<output messageLabel="Out"
				element="wdetails:reservationDetails" />
		</operation>

	</interface>

</description>
